--- a/src/views/unavailability/edit.html
+++ b/src/views/unavailability/edit.html
@@ -33,8 +33,8 @@
     {{ field("isPreference", "", "checkbox", "Preferable", model.unavailability.isPreference) }}
     <div class="mt-8 flex justify-center gap-4">
       {{ csrf(model) }}
-      <input type="submit" value="Save" class="block p-2 bg-sky-800 hover:bg-sky-400 text-white rounded" />
-      <a href="{{ model.cancelLink }}" class="block p-2 bg-red-400 text-white hover:border-y-red-800 rounded">Cancel</a>
+      <input type="submit" value="Save" class="block py-3 px-10 bg-sky-800 hover:bg-sky-400 text-white rounded" />
+      <a href="{{ model.cancelLink }}" class="block py-3 px-10 bg-red-800 hover:bg-red-500 text-white rounded">Cancel</a>
     </div>
   </form>
 </div>
