--- a/src/views/shiftContext/list.html
+++ b/src/views/shiftContext/list.html
@@ -26,6 +26,6 @@
 
 {% block content %}
   <h1 class="text-4xl mt-8 font-bold">Shift Contexts</h1>
-  <a href="/context/add/" class="block p-4 mt-8 rounded bg-blue-300 text-white w-fit">&plus; Add</a>
+  <a href="/context/add/" class="block p-4 mt-8 rounded bg-sky-800 text-white hover:bg-sky-400 w-fit">&plus; Add</a>
   {% include "./listPartial.html" %}
 {% endblock %}
