--- a/src/views/shiftContextPreference/edit.html
+++ b/src/views/shiftContextPreference/edit.html
@@ -6,16 +6,17 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
-  <div class="bg-white drop-shadow-lg mt-6 pb-4"
+  <div class="bg-white drop-shadow-lg mt-3 px-2 pb-2">
+    <div class="m-auto w-max">
   {{ teamMemberTabs(model.teamMember, "preferences") }}
   <form method="post" class="ms-4 mt-6 max-w-md">
     <table>
       <thead>
         <tr>
           <th class="p-4 text-left">Shift Context</th>
-          <th class="p-4 text-3x1">☹️</th>
-          <th class="p-4 text-3x1">😐</th>
-          <th class="p-4 text-3x1">🙂</th>
+          <th class="p-4 text-3xl">☹️</th>
+          <th class="p-4 text-3xl">😐</th>
+          <th class="p-4 text-3xl">🙂</th>
         </tr>
       </thead>
       <tbody>
@@ -43,7 +44,9 @@
     </table>
     <div class="mt-8 flex justify-center gap-4">
       {{ csrf(model) }}
-      <button type="submit" class="block p-2 bg-green-700 text-white hover:bg-green-300 rounded">Save</button>
+      <button type="submit" class="block py-2 px-10 bg-green-800 text-white hover:bg-green-600 rounded">Save</button>
     </div>
   </form>
+</div>
+</div>
 {% endblock content %}
