--- a/src/views/teamMember/profile.html
+++ b/src/views/teamMember/profile.html
@@ -17,7 +17,8 @@
 {% block title %}{{ model.teamMember.fullName }}{% endblock %}
 
 {% block content %}
-  <div class="bg-white drop-shadow-lg mt-6">
+  <div class="bg-white drop-shadow-lg px-2 pb-2 mt-3">
+    <div class="m-auto w-max">
   {{ teamMemberTabs(model.teamMember, "profile") }}
   <div class="max-w-lg ms-4">
     {{ profileItem("First name", model.teamMember.firstName) }}
@@ -38,5 +39,6 @@
       </a>
     </div>
   </div>
+</div>
 </div>
 {% endblock %}
