--- a/src/views/typicalAvailability/edit.html
+++ b/src/views/typicalAvailability/edit.html
@@ -24,7 +24,8 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
-<div class="bg-white drop-shadow-lg px-1 py-1 mt-6 ">
+<div class="bg-white drop-shadow-lg px-2 pb-2 mt-3">
+  <div class="m-auto w-max">
   {{ teamMemberTabs(model.teamMember, "availability") }}
   <h1 class="text-4xl mt-8 font-bold">{{ title }}</h1>
   <form method="post" action="{{ action }}" class="max-w-lg">
@@ -45,9 +46,10 @@
     {{ field("isPreference", "", "checkbox", "Preferable", model.typicalAvailability.isPreference) }}
     <div class="mt-8 flex justify-center gap-4">
       {{ csrf(model) }}
-      <input type="submit" value="Save" class="block p-2 bg-sky-800 hover:bg-sky-300 py-3 px-10 text-white" />
-      <a href="/team-member/{{ model.typicalAvailability.teamMemberId }}/availability/" class="block p-2 bg-red-500 text-white hover:bg-red-800 rounded">Cancel</a>
+      <input type="submit" value="Save" class="block rounded  bg-sky-800 hover:bg-sky-300 py-3 px-10 text-white" />
+      <a href="/team-member/{{ model.typicalAvailability.teamMemberId }}/availability/" class="block py-3 px-10 bg-red-500 text-white hover:bg-red-800 rounded">Cancel</a>
     </div>
   </form>
+</div>
 </div>
 {% endblock %}
