--- a/src/views/shiftContext/list.html
+++ b/src/views/shiftContext/list.html
@@ -25,7 +25,11 @@
 {% endblock %}
 
 {% block content %}
+<div class="bg-white drop-shadow-lg px-2 pb-2 mt-3">
+  <div class="m-auto w-max">
   <h1 class="text-4xl mt-8 font-bold">Shift Contexts</h1>
   <a href="/context/add/" class="block p-4 mt-8 rounded bg-sky-800 text-white hover:bg-sky-400 w-fit">&plus; Add</a>
   {% include "./listPartial.html" %}
+</div>
+</div>
 {% endblock %}
