--- a/src/views/color/list.html
+++ b/src/views/color/list.html
@@ -7,6 +7,8 @@
 {% endblock %}
 
 {% block content %}
+<div class="bg-white drop-shadow-lg px-2 pb-2 mt-3">
+  <div class="m-auto w-max">
 <h1 class="text-4xl mt-8 font-bold">Note Colors</h1>
 
 <form method="post" action="/colors/add/" id="form">
@@ -23,10 +25,10 @@
         <input type="text" form="form" name="name" placeholder="New color..." class="border rounded" />
       </td>
       <td class="p-2">
-        <button type="submit" form="form" class="block size-12 rounded bg-blue-200 text-white text-3xl">&plus;</button>
+        <button type="submit" form="form" class="block size-12 rounded text-white bg-sky-800 hover:bg-sky-400 text-3xl">&plus;</button>
       </td>
       <td class="p-2">
-        <button type="reset" form="form" class="block size-12 rounded bg-red-400 text-white text-3xl">&times;</button>
+        <button type="reset" form="form" class="block size-12 rounded bg-red-300 hover:bg-white hover:border-red-600 hover:border-1 hover:text-black text-white text-3xl">&times;</button>
       </td>
     </tr>
     {% for color in model.colors %}
@@ -38,13 +40,15 @@
           {{ color.name }}
         </td>
         <td class="p-2">
-          <a href="/color/{{ color.id }}/" class="block size-12 rounded bg-amber-200 text-center align-middle leading-10">✏️</a>
+          <a href="/color/{{ color.id }}/" class="block size-12 rounded bg-yellow-300 hover:bg-white hover:border-amber-600 hover:border-1 text-center align-middle leading-10">✏️</a>
         </td>
         <td class="p-2">
-          <a href="/color/{{ color.id }}/delete/" class="block size-12 rounded bg-red-400 text-white text-center align-middle leading-10 text-3xl">&times;</a>
+          <a href="/color/{{ color.id }}/delete/" class="block size-12  bg-red-300 hover:bg-white hover:border-red-600 hover:border-1 hover:text-black rounded text-white text-center align-middle leading-10 text-3xl">&times;</a>
         </td>
       </tr>
     {% endfor %}
   </tbody>
 </table>
+</div>
+</div>
 {% endblock %}
