--- a/src/views/shiftContext/edit.html
+++ b/src/views/shiftContext/edit.html
@@ -10,6 +10,8 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
+<div class="bg-white drop-shadow-lg px-2 pb-2 mt-3">
+  <div class="w-max m-auto">
   <h1 class="text-4xl mt-8 font-bold">
     {{ title }}
   </h1>
@@ -35,8 +37,9 @@
     <div class="mt-4 flex justify-center gap-4">
       <input type="hidden" name="id" value="{{ model.shiftContext.id }}" />
       {{ csrf(model) }}
-      <button type="submit" class="p-4 rounded bg-blue-300">Save</button>
-      <a href="/contexts/" class="p-4 rounded bg-gray-200">Cancel</a>
+      <button type="submit" class="py-3 px-10 rounded bg-sky-800 text-white hover:bg-sky-400">Save</button>
+      <a href="/contexts/" class="py-3 px-10 rounded bg-red-800 text-white hover:bg-red-500">Cancel</a>
     </div>
   </form>
+</div></div>
 {% endblock %}
