--- a/src/views/timeSlot/edit.html
+++ b/src/views/timeSlot/edit.html
@@ -38,6 +38,8 @@
 {% endblock %}
 
 {% block content %}
+<div class="bg-white drop-shadow-lg px-2 pb-2 mt-3">
+  <div class="m-auto w-max">
   <h1 class="text-4xl mt-8 font-bold">{{ title }}</h1>
   <form action="{{ action }}" method="post" class="mt-4">
     {{ formErrors(model.errors) }}
@@ -99,9 +101,11 @@
         <input type="hidden" name="timeSlotId" value="{{ model.timeSlot.id }}" />
         <input type="hidden" name="cancelLink" value="{{ model.cancel }}" />
         {{ csrf(model) }}
-        <input type="submit" value="Save" class="block p-2 bg-green-300 rounded" />
-        <a href="{{ model.cancel }}" class="block p-2 bg-gray-300 rounded">Cancel</a>
+        <input type="submit" value="Save" class="py-3 px-10 block p-2 bg-green-800 hover:bg-green-600 text-white rounded" />
+        <a href="{{ model.cancel }}" class=" py-3 px-10 block p-2 bg-red-800 hover:bg-red-500 text-white rounded">Cancel</a>
       </div>
     </div>
   </form>
+  </div>
+  </div>
 {% endblock %}
