--- a/src/views/schedule/week.html
+++ b/src/views/schedule/week.html
@@ -74,13 +74,13 @@
               {% endif %}
 
               {% if type == "ShiftContextNote" %}
-                {% if data.note %}
+                {% if data.colorId or data.note %}
                   {% if data.color.hex %}
-                    <p class="p-1 rounded mb-4" style="background-color: {{ '#' ~ data.color.hex }}; color: {{ '#' ~ data.color.hexForeground }};" >
+                    <p class="p-1 rounded mb-4 min-h-8" style="background-color: {{ '#' ~ data.color.hex }}; color: {{ '#' ~ data.color.hexForeground }};" >
                       {{ data.note }}
                     </p>
                   {% else %}
-                    <p class="p-1 rounded mb-4">
+                    <p class="p-1 rounded mb-4 min-h-8">
                       {{ data.note }}
                     </p>
                   {% endif %}
@@ -144,11 +144,11 @@
                 </div>
 
                 {% if data.color %}
-                  <p class="mt-4 p-1 rounded" style="background-color: #{{ data.color.hex }}; color: #{{ data.color.hexForeground }};">
+                  <p class="mt-4 p-1 rounded min-h-8" style="background-color: #{{ data.color.hex }}; color: #{{ data.color.hexForeground }};">
                     {{ data.note }}
                   </p>
                 {% else %}
-                  <p class="mt-4 p-1 rounded">
+                  <p class="mt-4 p-1 rounded min-h-8">
                     {{ data.note }}
                   </p>
                 {% endif %}
