Patch nav icon color

--- a/src/views/_shared/_layout.html
+++ b/src/views/_shared/_layout.html
@@ -19,7 +19,7 @@
     <header>
       <nav class=hover:*:not-first:block md:flex bg-sky-900 text-white">
         <ul class="md:flex hover:*:not-first:block m-auto bg-sky-800">
-          <li class="md:hidden p-4 select-none">
+          <li class="md:hidden p-4 select-none text-white">
             &equiv;
           </li>
           <li class="hidden md:block ">
