--- a/src/views/schedule/week.html
+++ b/src/views/schedule/week.html
@@ -16,7 +16,7 @@
 
 {% block content %}
   {# Navigation Header #}
-  <div class="w-full sm:w-xl mx-auto flex justify-between gap-8 px-4 py-8">
+  <div class="w-full sm:w-xl mx-auto flex justify-between gap-8 px-4 py-8 whitespace-nowrap">
     <a href="/schedule/{{ model.previousWeekString }}/" class="self-center select-none text-2x1 font-bold hover:underline">
       &lt;
     </a>
